tests/valid/datetime/datetime_underscore.fred
1989-10-14_14:35:54.832