tests/invalid/datetime/wrong_datetime.fred
1989-10-14T11:425:54.233